--- a/clients/administration-portal/src/app/modules/externalusers/request-view/request-view.component.html
+++ b/clients/administration-portal/src/app/modules/externalusers/request-view/request-view.component.html
@@ -15,15 +15,13 @@
       <!-- Request ID Column -->
       <ng-container matColumnDef="requestid">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Request ID</th>
-        <td mat-cell *matCellDef="let row">Request-{{ row.requestID }}</td>
+        <td mat-cell *matCellDef="let row">Request-{{ row?.requestID }}</td>
       </ng-container>
 
       <!-- CLient Column -->
       <ng-container matColumnDef="client">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Client</th>
-        <td mat-cell *matCellDef="let row">
-          {{ row.requester.client.name }}
-        </td>
+        <td mat-cell *matCellDef="let row" [innerText]="getClientName()"></td>
       </ng-container>
 
       <!--  Requester First Name Column -->
@@ -31,22 +29,24 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
           Requester First Name
         </th>
-        <td mat-cell *matCellDef="let row">{{ row.requester.firstname }}</td>
+        <td mat-cell *matCellDef="let row">
+          {{ row?.requester[0].firstname }}
+        </td>
       </ng-container>
 
       <!-- Requester Surname Column -->
-      <ng-container matColumnDef="requstersurname">
+      <ng-container matColumnDef="requestersurname">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
           Requester Surname
         </th>
-        <td mat-cell *matCellDef="let row">{{ row.requester.surname }}</td>
+        <td mat-cell *matCellDef="let row">{{ row?.requester[0].surname }}</td>
       </ng-container>
 
       <!-- Status Column -->
       <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
         <td mat-cell *matCellDef="let row">
-          {{ row.status }}
+          {{ row?.status }}
         </td>
       </ng-container>
 
@@ -56,7 +56,7 @@
           Grade Requested
         </th>
         <td mat-cell *matCellDef="let row">
-          {{ row.graderequired }}
+          {{ row?.graderequired }}
         </td>
       </ng-container>
 
@@ -72,7 +72,7 @@
       <ng-container matColumnDef="numberassigned">
         <th mat-header-cell *matHeaderCellDef mat-sort-header># Assigned</th>
         <td mat-cell *matCellDef="let row">
-          {{ row.assigned.length }}
+          {{ row?.assigned.length }}
         </td>
       </ng-container>
 
@@ -83,7 +83,7 @@
           <button
             class="btn btn-outline-secondary btn-sm"
             type="button"
-            routerLink="./request/{{ row._id }}"
+            routerLink="./request/{{ row?._id }}"
           >
             View Details
           </button>
